--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Investor Bidding Dashboard</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -56,8 +57,18 @@
     <div class="container">
         <h1>Investor Bidding Platform</h1>
         <div id="setup">
-            <input class="input-field" type="text" placeholder="Enter Investor Name" id="investor-name">
-            <input class="input-field" type="text" placeholder="Enter Pitcher Name" id="pitcher-name">
+            <table border="1" width="100%">
+                <thead>
+                    <tr>
+                        <th>Investor Name</th>
+                        <th>Pitcher Name</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody id="setup-table">
+                </tbody>
+            </table>
+            <button class="button" onclick="addRow()">Add More</button>
             <button class="button" onclick="startBidding()">Start Bidding</button>
         </div>
         <div id="bidding-section" style="display: none;">
@@ -75,31 +86,55 @@
                     <tbody id="bid-table">
                     </tbody>
                 </table>
+                <canvas id="bidChart"></canvas>
             </div>
         </div>
     </div>
     <script>
         let pitchers = [];
         let bids = [];
+        let investors = [];
         const pitchersContainer = document.getElementById("pitchers");
         const bidTable = document.getElementById("bid-table");
+        const setupTable = document.getElementById("setup-table");
+
+        function addRow() {
+            const row = document.createElement("tr");
+            row.innerHTML = `
+                <td><input type="text" class="input-field investor-name" placeholder="Enter Investor Name"></td>
+                <td><input type="text" class="input-field pitcher-name" placeholder="Enter Pitcher Name"></td>
+                <td><button class="button" onclick="removeRow(this)">Remove</button></td>
+            `;
+            setupTable.appendChild(row);
+        }
+
+        function removeRow(button) {
+            button.parentElement.parentElement.remove();
+        }
 
         function startBidding() {
-            const investorName = document.getElementById("investor-name").value;
-            const pitcherName = document.getElementById("pitcher-name").value;
+            investors = [];
+            pitchers = [];
+            document.querySelectorAll(".investor-name").forEach((input, index) => {
+                const investorName = input.value;
+                const pitcherName = document.querySelectorAll(".pitcher-name")[index].value;
+                if (investorName && pitcherName) {
+                    investors.push(investorName);
+                    pitchers.push({ id: index + 1, name: pitcherName, idea: "Business Idea" });
+                }
+            });
 
-            if (!investorName || !pitcherName) {
-                alert("Please enter both Investor and Pitcher names.");
+            if (investors.length === 0 || pitchers.length === 0) {
+                alert("Please enter at least one Investor and Pitcher name.");
                 return;
             }
 
-            pitchers = [{ id: 1, name: pitcherName, idea: "Business Idea" }];
             document.getElementById("setup").style.display = "none";
             document.getElementById("bidding-section").style.display = "block";
-            renderPitchers(investorName);
+            renderPitchers();
         }
 
-        function renderPitchers(investorName) {
+        function renderPitchers() {
             pitchersContainer.innerHTML = "";
             pitchers.forEach(pitcher => {
                 const card = document.createElement("div");
@@ -108,16 +143,17 @@
                     <h2>${pitcher.name}</h2>
                     <p>${pitcher.idea}</p>
                     <input class="input-field" type="number" placeholder="Bid Amount" id="amount-${pitcher.id}">
-                    <button class="button" onclick="placeBid('${investorName}', ${pitcher.id})">Place Bid</button>
+                    <button class="button" onclick="placeBid(${pitcher.id})">Place Bid</button>
                 `;
                 pitchersContainer.appendChild(card);
             });
         }
 
-        function placeBid(investor, pitcherId) {
+        function placeBid(pitcherId) {
             const amount = parseFloat(document.getElementById(`amount-${pitcherId}`).value);
             if (isNaN(amount) || amount <= 0) return;
 
+            const investor = investors[bids.length % investors.length]; // Assigning bids in round-robin fashion
             const pitcher = pitchers.find(p => p.id === pitcherId);
             bids.push({ investor, amount, pitcher: pitcher.name });
             renderBids();
@@ -130,6 +166,25 @@
                 const row = document.createElement("tr");
                 row.innerHTML = `<td>${bid.investor}</td><td>$${bid.amount}</td><td>${bid.pitcher}</td>`;
                 bidTable.appendChild(row);
+            });
+            updateChart();
+        }
+
+        function updateChart() {
+            const ctx = document.getElementById("bidChart").getContext("2d");
+            const labels = bids.map(bid => bid.pitcher);
+            const data = bids.map(bid => bid.amount);
+
+            new Chart(ctx, {
+                type: 'bar',
+                data: {
+                    labels: labels,
+                    datasets: [{
+                        label: 'Bid Amounts',
+                        data: data,
+                        backgroundColor: 'rgba(54, 162, 235, 0.6)'
+                    }]
+                }
             });
         }
     </script>
