--- a/index.html
+++ b/index.html
@@ -57,18 +57,31 @@
     <div class="container">
         <h1>Investor Bidding Platform</h1>
         <div id="setup">
+            <h2>Investors</h2>
             <table border="1" width="100%">
                 <thead>
                     <tr>
                         <th>Investor Name</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody id="investor-table">
+                </tbody>
+            </table>
+            <button class="button" onclick="addInvestorRow()">Add Investor</button>
+
+            <h2>Pitchers</h2>
+            <table border="1" width="100%">
+                <thead>
+                    <tr>
                         <th>Pitcher Name</th>
                         <th>Action</th>
                     </tr>
                 </thead>
-                <tbody id="setup-table">
+                <tbody id="pitcher-table">
                 </tbody>
             </table>
-            <button class="button" onclick="addRow()">Add More</button>
+            <button class="button" onclick="addPitcherRow()">Add Pitcher</button>
             <button class="button" onclick="startBidding()">Start Bidding</button>
         </div>
         <div id="bidding-section" style="display: none;">
@@ -96,16 +109,25 @@
         let investors = [];
         const pitchersContainer = document.getElementById("pitchers");
         const bidTable = document.getElementById("bid-table");
-        const setupTable = document.getElementById("setup-table");
+        const investorTable = document.getElementById("investor-table");
+        const pitcherTable = document.getElementById("pitcher-table");
 
-        function addRow() {
+        function addInvestorRow() {
             const row = document.createElement("tr");
             row.innerHTML = `
                 <td><input type="text" class="input-field investor-name" placeholder="Enter Investor Name"></td>
+                <td><button class="button" onclick="removeRow(this)">Remove</button></td>
+            `;
+            investorTable.appendChild(row);
+        }
+
+        function addPitcherRow() {
+            const row = document.createElement("tr");
+            row.innerHTML = `
                 <td><input type="text" class="input-field pitcher-name" placeholder="Enter Pitcher Name"></td>
                 <td><button class="button" onclick="removeRow(this)">Remove</button></td>
             `;
-            setupTable.appendChild(row);
+            pitcherTable.appendChild(row);
         }
 
         function removeRow(button) {
@@ -115,13 +137,11 @@
         function startBidding() {
             investors = [];
             pitchers = [];
-            document.querySelectorAll(".investor-name").forEach((input, index) => {
-                const investorName = input.value;
-                const pitcherName = document.querySelectorAll(".pitcher-name")[index].value;
-                if (investorName && pitcherName) {
-                    investors.push(investorName);
-                    pitchers.push({ id: index + 1, name: pitcherName, idea: "Business Idea" });
-                }
+            document.querySelectorAll(".investor-name").forEach(input => {
+                if (input.value) investors.push(input.value);
+            });
+            document.querySelectorAll(".pitcher-name").forEach(input => {
+                if (input.value) pitchers.push({ id: pitchers.length + 1, name: input.value, idea: "Business Idea" });
             });
 
             if (investors.length === 0 || pitchers.length === 0) {
@@ -153,7 +173,7 @@
             const amount = parseFloat(document.getElementById(`amount-${pitcherId}`).value);
             if (isNaN(amount) || amount <= 0) return;
 
-            const investor = investors[bids.length % investors.length]; // Assigning bids in round-robin fashion
+            const investor = investors[bids.length % investors.length];
             const pitcher = pitchers.find(p => p.id === pitcherId);
             bids.push({ investor, amount, pitcher: pitcher.name });
             renderBids();
@@ -168,24 +188,6 @@
                 bidTable.appendChild(row);
             });
             updateChart();
-        }
-
-        function updateChart() {
-            const ctx = document.getElementById("bidChart").getContext("2d");
-            const labels = bids.map(bid => bid.pitcher);
-            const data = bids.map(bid => bid.amount);
-
-            new Chart(ctx, {
-                type: 'bar',
-                data: {
-                    labels: labels,
-                    datasets: [{
-                        label: 'Bid Amounts',
-                        data: data,
-                        backgroundColor: 'rgba(54, 162, 235, 0.6)'
-                    }]
-                }
-            });
         }
     </script>
 </body>
